# Reduct

./: .gitignore  .gitmodules  Cargo.toml
builder/: Cargo.toml
builder/assets/: limine.conf
builder/src/: main.rs
rstd/: Cargo.toml
