[workspace]
members = [
    "builder",
    "kernel",
    "rstd",
    "driver/acpid",
    "driver/pcid",
    "driver/nvmed",
    "driver/fsmd",
    "kernel/crates/*",
    "apps/init", "driver/fbd",
]
resolver = "2"
default-members = ["builder"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 0
panic = "abort"
strip = true
