[package]
edition = "2024"
name = "builder"
version = "0.1.0"

[dependencies]
anyhow = "1.0.94"
argh = "0.1.12"
gpt = "4.0.0"
ovmf-prebuilt = "0.2.1"
tempfile = "3.14.0"

[dependencies.fatfs]
default-features = false
features = ["std", "alloc"]
version = "0.3.6"

[dependencies.kernel]
artifact = "bin"
path = "../kernel"
target = "x86_64-unknown-none"

[dependencies.acpid]
artifact = "bin"
path = "../driver/acpid"
target = "x86_64-unknown-none"

[dependencies.pcid]
artifact = "bin"
path = "../driver/pcid"
target = "x86_64-unknown-none"

[dependencies.ps2d]
artifact = "bin"
path = "../driver/ps2d"
target = "x86_64-unknown-none"

[dependencies.fbd]
artifact = "bin"
path = "../driver/fbd"
target = "x86_64-unknown-none"

[dependencies.nvmed]
artifact = "bin"
path = "../driver/nvmed"
target = "x86_64-unknown-none"

[dependencies.fsmd]
artifact = "bin"
path = "../driver/fsmd"
target = "x86_64-unknown-none"

[dependencies.init]
artifact = "bin"
path = "../apps/init"
target = "x86_64-unknown-none"
